upgraded index.html , favicon moved to public folder

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/src/assets/favicon/favicon.png" />
+  <link rel="icon" href="/favicon/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="MD Earth Movers - Profesionalni građevinski radovi i usluge iskopavanja.">
+  <meta property="og:title" content="MD Earth Movers - Građevinski radovi" />
+  <meta property="og:description" content="Profesionalne usluge iskopavanja i građevinskih radova." />
+  <meta property="og:image" content="/og-image.jpg" />
+  <meta property="og:url" content="https:mdearthmovers.rs" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="canonical" href="https:mdearthmovers.rs">
   <title>MD Earth movers</title>
 </head>
 
