--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="MD Earth Movers - Profesionalni građevinski radovi i usluge iskopavanja.">
   <meta property="og:title" content="MD Earth Movers - Građevinski radovi" />
   <meta property="og:description" content="Profesionalne usluge iskopavanja i građevinskih radova." />
-  <meta property="og:image" content="/og-image.jpg" />
+  <meta property="og:image" content="https://mdearthmovers.rs/images/mdEarth.jpeg"/>
   <meta property="og:url" content="https:mdearthmovers.rs" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="canonical" href="https:mdearthmovers.rs">
